--- a/402-ann-intro.Rmd
+++ b/402-ann-intro.Rmd
@@ -170,7 +170,7 @@ plotnet(ann.c1, cex_val = 0.6)
 
 ```
 
-### ANN classification: comparering to logistic regression
+### ANN classification: comparing to logistic regression
 ```{r ann-classification-logisitc-regression}
 # we run prediction using compute function()
 ann.c1_predictions <- neuralnet::compute(ann.c1, 
@@ -226,9 +226,9 @@ print(c(knn.cr, cart.cr, logreg.cr, ann1.cr, ann2.cr))
 
 ```
 
+<!-- # For multi-class problems softmax activation function is used (equivalent to multiple logistic regression) -->
 ### ANN classification: changing activation function
 ```{r}
-# For multi-class problems softmax activation function is used (equivalent to multiple logistic regression)
 # We can change activation function via act.fct parameter and include custom functions
 # e.g. softplus <- function(x) log(1 + exp(x)) 
 # or relu <- function(x) sapply(x, function(z) max(0,z))
